@@ -1,3 +1,8 @@
+2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/model/couch.py:
+	  Set default type of a Thing.
+
 2010-02-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/model/couch.py:
